Use the best html element

--- a/index.html
+++ b/index.html
@@ -1,18 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>Coming Soon!!!</title>
-<style type="text/css">
-<!--
-.style1 {font-family: Arial, Helvetica, sans-serif}
--->
-</style>
+<title>Coming Sooner!!!</title>
 </head>
 
 <body>
- <p class="style1">&nbsp;</p>
- <p>&nbsp;</p>
+  <marquee direction="up">:)</marquee>
  <p><img src="New%20Logo.GIF" width="286" height="157"> </p>
-
-
 </body></html>
